[package]
name = "inline-proc"
version = "0.1.1"
edition = "2021"
description = "Inline procedural macros"
readme = "README.md"
repository = "https://github.com/SabrinaJewson/inline-proc"
license = "MIT OR Apache-2.0"
keywords = ["inline", "procedural", "macro"]
categories = ["development-tools", "development-tools::build-utils", "development-tools::procedural-macro-helpers", "rust-patterns"]

[dependencies]
cargo_metadata = "0.13.1"
cargo_toml = "0.15.3"
libloading = "0.6.7"
once_cell = "1.5.2"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.24"
quote = "1.0.11"
serde = { version = "1.0.129", features = ["derive"] }
syn = { version = "1.0.43", features = ["full"] }
toml = "0.7.8"

ron = { version = "0.6.6", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
json = ["serde_json"]

[dev-dependencies]
inline-proc = { path = "./", features = ["ron"] }

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"
proc-macro = true
