[package]
name = "inline-proc"
version = "0.1.1"
edition = "2021"
description = "Inline procedural macros"
readme = "README.md"
repository = "https://github.com/SabrinaJewson/inline-proc"
license = "MIT OR Apache-2.0"
keywords = ["inline", "procedural", "macro"]
categories = ["development-tools", "development-tools::build-utils", "development-tools::procedural-macro-helpers", "rust-patterns"]

[dependencies]
cargo_metadata = "0.19.2"
cargo_toml = "0.22.1"
libloading = "0.8.7"
once_cell = "1.21.3"
proc-macro-error2 = "2.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
serde = { version = "1.0.219", features = ["derive"] }
syn = { version = "2.0.101", features = ["full"] }
toml = "0.8.22"

ron = { version = "0.10.1", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
json = ["serde_json"]

[dev-dependencies]
inline-proc = { path = "./", features = ["ron"] }

[package.metadata.docs.rs]
all-features = true

[lib]
path = "src/lib.rs"
proc-macro = true
